# django-htmx-plus

./: .gitignore  .readthedocs.yaml  AI.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.claude/skills/release-notes/: SKILL.md
.github/workflows/: release.yml
django_htmx_plus/: http.py  middleware.py  mixins.py  utils.py  views.py
django_htmx_plus/static/django_htmx_plus/: django-htmx-plus.js
django_htmx_plus/templates/cotton/tables/: header_cell.html  htmx_table.html  pager.html
django_htmx_plus/templatetags/: cotton_extras.py  django_htmx_plus.py
docs/: ai_usage.rst  api_http.rst  changelog.rst  conf.py  features.rst  index.rst  installation.rst  license.rst  quick_start.rst  requirements.txt
docs/api/: components.rst  filters.rst  javascript.rst  middleware.rst  mixins.rst  views.rst
docs/guide/: components.rst  filters_sorting.rst  forms.rst  list_views.rst  modals.rst  responses.rst
scripts/: docs_dev.py  run_tests.py
tests/: settings.py  test_http.py  test_middleware.py  test_mixins.py  test_utils.py  test_views.py
