[project]
name = "django-htmx-plus"
description = "django-htmx plus some extras"
authors = [
    {name = "Tim Davis",email = "binary.god@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django-cotton (>=2.6.2,<3.0.0)",
]
dynamic = ["version"]

[tool.poetry]
exclude = [".venv/", "build/", "dist/", ".readthedocs.yaml"]
version = "0.0.0"

[tool.poetry.scripts]
tests = "run_tests:main"
docs = "scripts.docs_dev:main"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
py_version = 311
line_length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.ruff]
line-length = 120

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pylint = "^4.0.5"
sphinx = ">=7"
sphinx-copybutton = "^0.5.2"
shibuya = "^2026.1.9"
sphinx-autobuild = "^2025.8.25"

[tool.poetry-dynamic-versioning]
enable = true
latest-tag = true

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
